--- a/htmlassignment.html
+++ b/htmlassignment.html
@@ -7,5 +7,5 @@
 <body>
     <h2>Who I am</h2>
     <p> My name is Zakaria Omer and I am 17 years old. </p>
-    <img src="de copy.svg" alt="me" width="500" height="600">
+    <img src="de copy.svg" width="500" height="600">
 </body>
